src/objects/Donation__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount donated</description>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation_Bucket__c</fullName>
        <description>Classifies the donation</description>
        <label>Donation Bucket</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Buddhist Society (temporarily)</fullName>
                </value>
                <value>
                    <fullName>General Fund</fullName>
                </value>
                <value>
                    <fullName>RMMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donation_Date__c</fullName>
        <description>Date of Donation</description>
        <label>Donation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Donation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Contact__c</columns>
        <columns>Donation_Bucket__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D#-{00000}</displayFormat>
        <label>Donation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>